--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1663,6 +1663,13 @@ video {
 
 /* Mobile Adjustments */
 @media (max-width: 768px) {
+  .floating-cta {
+    bottom: 95px;
+    right: 12px;
+  }
+  .floating-cta button {
+    height: 45px;
+  }
   .newsletter-card {
     text-align: center;
     flex-direction: column;
